removed sending tokens to user after registretion
